@@ -23,7 +23,6 @@ import org.simpleframework.xml.Root;
 import org.simpleframework.xml.core.Persister;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -143,7 +142,7 @@ public class Result implements Parcelable {
     }
 
     public static Result vod(Vod item) {
-        return list(Arrays.asList(item));
+        return list(List.of(item));
     }
 
     public Result() {
